--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 <body>
 
  <!-- navigation code here -->
+ <div class = 'navbar'>
+   <h1>SpaceWalkers</h1>
+   <nav>
+      <a>Home</a>
+      <a>About Us</a>
+      <a>Blog</a>
+      <a>Contact</a>
+      <a>Sign In</a>
+   </nav>
+ </div>
 
   <div class="container home">
 
